--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,12 @@
 [metadata]
 name = loglette
 version = attr: loglette.__version__
+author = attr: loglette.__author__
+author_email = siku2@outlook.com
 description = A changelog parser
 long_description = file: README.md
+long_description_content_type = "text/markdown"
+url = "https://github.com/siku2/Loglette"
 keywords = changelog
 license = MIT License
 classifiers =
