--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,8 @@ author = attr: loglette.__author__
 author_email = siku2@outlook.com
 description = A changelog parser
 long_description = file: README.md
-long_description_content_type = "text/markdown"
-url = "https://github.com/siku2/Loglette"
+long_description_content_type = text/markdown
+url = https://github.com/siku2/Loglette
 keywords = changelog
 license = MIT License
 classifiers =
