--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = loglette
 version = attr: loglette.__version__
-author = attr: loglette.__author__
+author = siku2
 author_email = siku2@outlook.com
 description = A changelog parser
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/siku2/Loglette
 keywords = changelog
-license = MIT License
+license = file: LICENSE
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
