--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,10 @@ packages = find:
 install_requires =
     python-dateutil
 
+[options.extras_require]
+html = mistune; jinja2
+all = mistune; jinja2
+
 [options.packages.find]
 include = loglette
 
