include all sub-packages and manual version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = loglette
-version = attr: loglette.__version__
+version = 0.1.0
 author = siku2
 author_email = siku2@outlook.com
 description = A changelog parser
@@ -24,7 +24,7 @@ html = mistune; jinja2
 all = mistune; jinja2
 
 [options.packages.find]
-include = loglette
+include = loglette*
 
 [options.entry_points]
 console_scripts =
